Changed "first" and "second" to X and Y in Pair.java and "third" to Z in Trio.java